# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/accessibility/accessibility_aafwk.gni")
import("//build/ohos.gni")

ohos_shared_library("accessibility") {
  include_dirs = [
    "//base/accessibility/common/log/include",
    "./include",
  ]

  defines = [
    "AAMS_LOG_TAG = \"accessibility_napi\"",
    "AAMS_LOG_DOMAIN = 0xD005210",
  ]

  sources = [
    "./src/napi_accessibility_config_observer.cpp",
    "./src/napi_accessibility_element.cpp",
    "./src/napi_accessibility_event_info.cpp",
    "./src/napi_accessibility_gesture_path.cpp",
    "./src/napi_accessibility_gesture_pos.cpp",
    "./src/napi_accessibility_system_ability_client.cpp",
    "./src/napi_accessibility_utils.cpp",
    "./src/native_module.cpp",
  ]

  configs = []

  deps = [
    "${aafwk_kits_path}/ability/native:abilitykit_native",
    "${aafwk_kits_path}/appkit:appkit_native",
    "//base/accessibility/interfaces/innerkits/aafwk:accessibleability",
    "//base/accessibility/interfaces/innerkits/acfwk:accessibilityconfig",
    "//base/accessibility/interfaces/innerkits/asacfwk:accessibilityclient",
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/interface:aams_interface",
    "//foundation/arkui/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "barrierfree"
  part_name = "accessibility"
}

group("napi_packages") {
  deps = [
    ":accessibility",
    "//base/accessibility/interfaces/kits/napi/accessibility_config:config_napi",
    "//base/accessibility/interfaces/kits/napi/accessibility_extension:accessibilityextensionability_napi",
    "//base/accessibility/interfaces/kits/napi/accessibility_extension_context:accessibilityextensioncontext_napi",
    "//base/accessibility/interfaces/kits/napi/accessibility_extension_module_loader:accessibility_extension_module",
  ]
}
