# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/barrierfree/accessibility/accessibility_aafwk.gni")

ohos_shared_library("accessibility") {
  include_dirs = [
    "//foundation/barrierfree/accessibility/common/log/include",
    "./include",
  ]

  defines = [
    "AAMS_LOG_TAG = \"accessibility_napi\"",
    "AAMS_LOG_DOMAIN = 0xD005210",
  ]

  sources = [
    "./src/napi_accessibility_config_observer.cpp",
    "./src/napi_accessibility_event_info.cpp",
    "./src/napi_accessibility_system_ability_client.cpp",
    "./src/napi_accessibility_utils.cpp",
    "./src/native_module.cpp",
  ]

  configs = []

  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "${ability_runtime_path}/frameworks/native/appkit:appkit_native",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/aafwk:accessibleability",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/acfwk:accessibilityconfig",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/asacfwk:accessibilityclient",
    "//foundation/barrierfree/accessibility/interfaces/innerkits/common:accessibility_common",
    "//foundation/barrierfree/accessibility/services/interface:aams_interface",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "barrierfree"
  part_name = "accessibility"
}

group("napi_packages") {
  deps = [
    ":accessibility",
    "//foundation/barrierfree/accessibility/interfaces/kits/napi/accessibility_config:config_napi",
    "//foundation/barrierfree/accessibility/interfaces/kits/napi/accessibility_extension:accessibilityextensionability_napi",
    "//foundation/barrierfree/accessibility/interfaces/kits/napi/accessibility_extension_context:accessibilityextensioncontext_napi",
    "//foundation/barrierfree/accessibility/interfaces/kits/napi/accessibility_extension_module_loader:accessibility_extension_module",
  ]
}
